# FDAS

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
FDAS/: README.txt
FDAS/common/inc/: AOCL_Utils.h
FDAS/common/src/: AOCL_Utils.cpp
FDAS/fdas/: Makefile  compile_command.txt
FDAS/fdas/device/: fdas.cl  fdas_fft2_op2.cl  fft_4_1.cl  twid_radix_2_2.cl
FDAS/fdas/host/inc/: PcaCArray.h  fdas.h  fft_config.h
FDAS/fdas/host/src/: main.cpp
FDAS/test/test-vector-generator/: fdas.ipynb  tmpl-gen.py  tv-gen.py  tvg.py
docker/: Dockerfile  README.md  id_rsa.pub  opencl-env.sh  setup.sh
fdas/: CMakeLists.txt  fdas_config.h
fdas/src/device/: detect.cl  fdas.cl  fdas_gen.cl  fft_4p.cl  ft_conv.cl  hsum.cl  preld.cl  preload.cl  ringbuf.cl  store_cands.cl
fdas/src/host/: AlignedBuffer.h  FDAS.cpp  FDAS.h  PcaCArray.h  gen_info.h  main.cpp  main_gtest.cpp  print_config.cpp
fdas/test/: fdas.ipynb  ft-conv.py  ft_conv.py  hsum.py  npy_to_raw.py  print_candidates.py  tv-gen.py
fdas/test/configs/: FDAS-small.yaml  FDAS-tiny.yaml  FDAS-unit.yaml
fdas/test/tmpl/: tmpl-gen.py
fdas/test/vect/: tv-gen.py
fdas/tmpl/: fdas_templates_21_87.5.npy  fdas_templates_21_87.5_ft.npy  fdas_templates_21_87.5_ft_p4.npy  fdas_templates_85_350.npy  fdas_templates_85_350_ft.npy  fdas_templates_85_350_ft_p4.npy  re-gen.sh  tmpl-gen.py
